--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["airbnb", "prettier", "prettier/react", "react-app"],
+  "extends": ["airbnb", "prettier", "react-app"],
   "plugins": ["prettier"],
   "rules": {
     "camelcase": 0,
