--- a/package.json
+++ b/package.json
@@ -25,41 +25,42 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@tryghost/content-api": "^1.4.13",
-    "next": "10.0.5",
+    "@tryghost/content-api": "^1.4.14",
+    "next": "10.0.7",
     "normalize.css": "^8.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "@typescript-eslint/parser": "^4.12.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.17.0",
+    "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-flowtype": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.3.7",
-    "lint-staged": "^10.5.3",
+    "husky": "^5.1.1",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
-    "sass": "^1.32.2",
-    "stylelint": "^13.8.0",
+    "sass": "^1.32.8",
+    "stylelint": "^13.11.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.2"
   },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "lint": "lint-staged",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "husky install"
   },
   "browserslist": [
     "> 0.5%",
@@ -74,10 +75,5 @@
     "src/**/*.{css,sass,scss}": [
       "stylelint './src/**/*.{css,sass,scss}' --fix"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && git add ."
-    }
   }
 }
