--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@tryghost/content-api": "^1.4.14",
+    "date-fns": "^2.17.0",
     "next": "10.0.7",
     "normalize.css": "^8.0.1",
     "react": "17.0.1",
