--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "next": "10.0.7",
     "normalize.css": "^8.0.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "reframe.js": "^3.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.15.2",
