--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "no-undef": 0,
     "no-underscore-dangle": 0,
     "no-unused-vars": 0,
+    "import/extensions": 0,
     "import/imports-first": ["error", "absolute-first"],
     "import/newline-after-import": "error",
     "import/no-extraneous-dependencies": 0,
