feat: add FeaturedPost title__link line clamp

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -48,6 +48,7 @@
       "overflow",
       "overflow-x",
       "overflow-y",
+      "box-orient",
       "box-sizing",
       "order",
       "max-width",
@@ -97,6 +98,7 @@
       "font-style",
       "font-variant",
       "font-weight",
+      "line-clamp",
       "line-height",
       "letter-spacing",
       "color",
