--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": ["airbnb", "prettier", "react-app", "next"],
   "plugins": ["prettier"],
   "rules": {
+    "array-callback-return": 0,
     "camelcase": 0,
     "func-names": 0,
     "no-console": ["warn", { "allow": ["warn", "error"] }],
