--- a/.stylelintrc
+++ b/.stylelintrc
@@ -245,6 +245,10 @@
       {
         "type": "rule",
         "selector": "^&(.*)"
+      },
+      {
+        "type": "rule",
+        "selector": "^(.*)"
       }
     ]
   }
