--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "reframe.js": "^3.0.3"
+    "reframe.js": "^3.0.3",
+    "sharp": "^0.29.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.29.3",
