--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-responsive": "^9.0.0-beta.4",
     "reframe.js": "^3.0.3",
     "sharp": "^0.29.0"
   },
