--- a/.stylelintrc
+++ b/.stylelintrc
@@ -22,7 +22,6 @@
     "color-hex-length": "long",
     "declaration-colon-newline-after": null,
     "declaration-empty-line-before": "never",
-    "font-family-no-missing-generic-family-keyword": null,
     "length-zero-no-unit": null,
     "no-descending-specificity": null,
     "number-leading-zero": "always",
@@ -43,6 +42,7 @@
       "flex-grow",
       "justify-content",
       "align-items",
+      "flex-basis",
       "align-self",
       "vertical-align",
       "overflow",
@@ -51,11 +51,11 @@
       "box-orient",
       "box-sizing",
       "order",
-      "max-width",
       "min-width",
+      "max-width",
       "width",
-      "max-height",
       "min-height",
+      "max-height",
       "height",
       "padding",
       "padding-top",
@@ -73,34 +73,39 @@
       "border-bottom",
       "border-left",
       "border-width",
-      "border-radius",
-      "border-color",
       "border-style",
+      "border-color",
+      "border-radius",
+      "border-top-right-radius",
+      "border-bottom-right-radius",
+      "border-bottom-left-radius",
+      "border-top-left-radius",
       "box-shadow",
       "outline",
       "outline-width",
+      "outline-offset",
       "outline-style",
       "outline-color",
-      "outline-offset",
       "white-space",
+      "word-break",
       "text-overflow",
       "text-align",
       "text-justify",
+      "text-transform",
       "text-decoration",
-      "text-decoration-style",
       "text-decoration-line",
+      "text-decoration-style",
       "text-decoration-color",
       "text-shadow",
-      "text-transform",
       "font",
       "font-family",
-      "font-size",
       "font-style",
       "font-variant",
       "font-weight",
+      "font-size",
+      "letter-spacing",
       "line-clamp",
       "line-height",
-      "letter-spacing",
       "color",
       "fill",
       "stroke",
@@ -108,27 +113,28 @@
       "background",
       "background-image",
       "background-color",
-      "background-repeat",
       "background-position",
       "background-size",
+      "background-repeat",
       "background-attachment",
+      "object-fit",
       "transform",
       "transform-style",
       "transform-origin",
       "animation",
       "animation-name",
+      "animation-direction",
       "animation-duration",
-      "animation-timing-function",
       "animation-delay",
       "animation-iteration-count",
-      "animation-direction",
+      "animation-timing-function",
       "animation-fill-mode",
       "animation-play-state",
       "transition",
       "transition-property",
       "transition-duration",
-      "transition-timing-function",
       "transition-delay",
+      "transition-timing-function",
       "counter-reset",
       "counter-increment",
       "content",
@@ -226,6 +232,14 @@
       {
         "type": "rule",
         "selector": "^&:last-child"
+      },
+      {
+        "type": "rule",
+        "selector": "^&:not(.*)"
+      },
+      {
+        "type": "rule",
+        "selector": "^:global"
       },
       {
         "type": "rule",
