--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@tryghost/content-api": "^1.5.12",
+    "bulma": "^0.9.3",
     "date-fns": "^2.23.0",
     "lazysizes": "^5.3.2",
     "next": "^11.1.0",
+    "nextjs-breadcrumbs": "^1.1.9",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
