feat: update dependencies; update config files; move helpers styles

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@vgerasimovich/next-ghost-blog",
-  "version": "1.0.0",
+  "name": "@hotepp/next-ghost-blog",
+  "version": "0.0.1",
   "description": "A progressive blog, made with Next.js and Ghost",
   "repository": {
     "type": "git",
-    "url": "https://github.com/vgerasimovich/next-ghost-blog.git"
+    "url": "https://github.com/hotepp/next-ghost-blog.git"
   },
   "keywords": [
     "next",
@@ -14,60 +14,55 @@
   ],
   "author": {
     "name": "Vlad Gerasimovich",
-    "email": "vlad.gerasimovich.micro@outlook.com",
+    "email": "hotepp@pm.me",
     "url": "https://vladg.dev"
   },
-  "license": "MIT",
-  "bugs": "https://github.com/vgerasimovich/next-ghost-blog/issues",
+  "license": "ISC",
+  "bugs": "https://github.com/hotepp/next-ghost-blog/issues",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "@tryghost/content-api": "^1.5.12",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@tryghost/content-api": "^1.5.13",
     "bulma": "^0.9.3",
     "clsx": "^1.1.1",
-    "date-fns": "^2.23.0",
+    "date-fns": "^2.25.0",
     "lazysizes": "^5.3.2",
-    "next": "^11.1.0",
+    "next": "^12.0.1",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reframe.js": "^3.0.3",
-    "sharp": "^0.29.0"
+    "sharp": "^0.29.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-next": "^11.1.0",
+    "eslint": "^8.1.0",
+    "eslint-config-next": "^12.0.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.9.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
-    "prettier": "^2.3.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-webpack-plugin": "^3.0.1",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
+    "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
-    "sass": "^1.38.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-order": "^4.1.0",
-    "typescript": "^4.3.5"
+    "sass": "^1.43.4",
+    "stylelint": "^14.0.1",
+    "stylelint-config-standard-scss": "^2.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-webpack-plugin": "^3.0.1",
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "lint": "lint-staged",
-    "start": "next start",
-    "postinstall": "husky install"
+    "prepare": "husky install",
+    "start": "next start"
   },
   "browserslist": [
     "> 0.5%",
